Set styles for flexbox containers

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ body {
   padding: 0;
   background-color: #313244;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 10px;
+}
